add / untitled filter

--- a/src/scripts/directives/palette-info/palette-info.html
+++ b/src/scripts/directives/palette-info/palette-info.html
@@ -1,6 +1,6 @@
 <div class="palette-info clearfix">
   <div class="pull-left">
-    <p class="title">{{infoData.title}}</p>
+    <p class="title">{{infoData.title | untitled}}</p>
     <p class="username">by {{infoData.userName}}</p>
   </div>
   <div class="pull-right controls">
