add / hexToHsl filter and utility

--- a/src/scripts/directives/palette/palette.html
+++ b/src/scripts/directives/palette/palette.html
@@ -5,6 +5,7 @@
     <div class="color-values">
       <input value="#{{color}}" on-click-focus/>
       <input value="{{color | hexToRgba}}" on-click-focus/>
+      <input value="{{color | hexToHsl}}" on-click-focus/>
     </div>
   </li>
 </ul>
