--- a/src/scripts/directives/palette/palette.html
+++ b/src/scripts/directives/palette/palette.html
@@ -1,5 +1,5 @@
 <ul>
-  <li ng-repeat="color in colors"
+  <li ng-repeat="color in colors track by $index"
       class="{{color | colorContrast}}"
       style="background-color: #{{color}}">
     <div class="color-values">
