--- a/src/scripts/directives/saved-palettes/saved-palettes.html
+++ b/src/scripts/directives/saved-palettes/saved-palettes.html
@@ -6,7 +6,7 @@
   <li ng-repeat="palette in palettes track by $index">
     <p class="title">{{palette.title | untitled}}</p>
     <div class="saved-palette" ng-click="loadPalette(palette)">
-      <div ng-repeat="color in palette.colors"
+      <div ng-repeat="color in palette.colors track by $index"
         style="background-color: #{{color}}">
       </div>
     </div>
