--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>COLOURLovers Palettes</title>
+  <link rel="icon" type="image/png" href="assets/images/favicon.png" />
   <link rel="stylesheet" href="dist/app.css">
 </head>
 <body ng-app="App" ng-controller="AppController as appCtrl">
