:iphone: update responsive styles

--- a/src/scripts/directives/palette-info/palette-info.html
+++ b/src/scripts/directives/palette-info/palette-info.html
@@ -1,9 +1,9 @@
-<div class="palette-info clearfix">
-  <div class="pull-left">
+<div class="palette-info">
+  <div>
     <p class="title">{{infoData.title | untitled}}</p>
     <p class="username">by {{infoData.userName}}</p>
   </div>
-  <div class="pull-right controls">
+  <div class="controls">
     <ul class="cl-clean-list cl-inline-list">
       <li class="cl-has-tooltip">
         <button class="cl-icon-btn entypo toggle-info-button">&#8505;</button>
